[package]
name = "vsdb_derive"
version = "0.1.0"
authors = ["fanhui.x@gmail.com"]
edition = "2021"
description = "Versioned Stateful DataBase, mainly used in blockchain scene."
homepage = "https://github.com/ccmlm/vsdb"
repository = "https://github.com/ccmlm/vsdb"
keywords = ["git", "leveldb", "rocksdb", "version", "vcs"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
