[package]
name = "vsdb_derive"
version = "0.2.3"
authors = ["fanhui.x@gmail.com"]
edition = "2021"
description = "Some procedure macro implementations for vsdb."
homepage = "https://github.com/ccmlm/vsdb_derive"
repository = "https://github.com/ccmlm/vsdb_derive"
keywords = ["git", "leveldb", "rocksdb", "version", "vcs"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
